fix room page on 320px and add overflow on modal

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -36,3 +36,7 @@
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+body.modal-opened {
+  overflow: hidden;
+}
